--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,18 +1,47 @@
-.nav {
-  padding: 0.1em;
+.site-header {
+  background: #FFEAAA;
 }
 
+/* REVIEW: Float the main header to the left, to make room for the hamburger menu. */
+.heading-group-h1 {
+  float: left;
+  padding: 0 0 .2em 1em;
+}
+
+/* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+/* We changed size in icons.css file*/
+/*.icon-menu {
+  float: right;
+}*/
+#filters {
+  padding: 0;
+  list-style: none;
+}
+
+.template {
+  display: none;
+}
+.byline {
+  color: #777;
+}
+.byline a {
+  font-weight: bold;
+  text-decoration: none;
+}
+.nav {
+  display: inline-block;
+  padding: 0.1em;
+  width: 100%;
+}
 .nav ul {
   display: none;
   padding: 0;
   list-style: none;
   clear: both;
 }
-
 .nav:hover ul {
   display: block;
 }
-
 .nav li {
   margin-right: .4em;
   font-size: 1.5em;
@@ -20,26 +49,27 @@
   border-bottom: 1px solid #ccc;
 }
 @media only screen and (min-width: 640px) {
-  .icon-menu {
+  .menu {
     display: none;
   }
-
   .nav {
     padding: .2em .2em .2em 2em;
   }
-
   .nav ul {
     display: block;
   }
-
   .nav ul li {
     display: inline;
     border-bottom: none;
   }
-
   .nav ul li:hover a {
     color: #614936;
     font-family: 'Bilbo', cursive;
   }
-
+  .slidingHorizontal{
+    display: block;
+  }
+  .slidingHorizontal span{
+    display: block;
+  }
 }
