got the filter to work and tabs are working. worked on css to add more styling.

--- a/styles/icons.css
+++ b/styles/icons.css
@@ -22,7 +22,9 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
+.icon-linkedin-square:before {
+  content: "\e900";
+}
 .icon-home:before {
 	content: "\e908";
 }
