--- a/styles/layout.css
+++ b/styles/layout.css
@@ -21,14 +21,30 @@ video{
   position: absolute;
   width: 100%;
 }
+.background-container{
+  background-image: url('../assets/abstract.jpg');
+  background-size: cover;
+  /*background: transparent;*/
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  /*opacity: 0.1;*/
+  z-index: -1;
+}
+
+main{
+  margin-top: 0;
+}
 h2{
   /*border-style: dashed;*/
   color: #614936;
   font-family: 'Lovers Quarrel', cursive;
-  font-size: 8em;
+  font-size: 7em;
   font-weight: lighter;
   display: block;
   margin-top: 0;
+  margin-bottom: 0;
   padding-top: 0;
 }
 .pull-left {
