--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,6 +1,12 @@
 .site-header {
   background: #FFEAAA;
 }
+.my-name{
+     font-family: 'Bilbo', cursive;
+     font-size: 8.0em;
+     padding-bottom: 0;
+     text-align: center;
+}
 
 /* REVIEW: Float the main header to the left, to make room for the hamburger menu. */
 .heading-group-h1 {
@@ -85,4 +91,79 @@
   .slidingHorizontal span{
     display: block;
   }
+  .heading-group-h1 {
+    padding: .1em .1em .1em 2em;
+    float: none;
+  }
+  #filters select {
+    width: 15em;
+    margin: .2em .2em;
+  }
+    #filters li {
+    width: 20em;
+    display: inline;
+  }
+}
+.slidingHorizontal{
+  /*border-style: dashed;*/
+  display: inline;
+  padding: 0;
+  text-indent: 15%;
+}
+.slidingHorizontal span{
+  animation: leftToRight 12.5s linear infinite 0s;
+  -ms-animation: leftToRight 12.5s linear infinite 0s;
+  -webkit-animation: leftToRight 7.5s linear infinite 0s;
+  color: 	#176D88;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
+.slidingHorizontal span:nth-child(2){
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+.slidingHorizontal span:nth-child(3){
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+/*.slidingHorizontal span:nth-child(4){
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+.slidingHorizontal span:nth-child(5){
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
+}*/
+@-moz-keyframes leftToRight{
+  0% { opacity: 0; }
+  5% { opacity: 0; -moz-transform: translateX(-50px); }
+  10% { opacity: 1; -moz-transform: translateX(0px); }
+  25% { opacity: 1; -moz-transform: translateX(0px); }
+  30% { opacity: 0; -moz-transform: translateX(50px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; }
+}
+@-webkit-keyframes leftToRight{
+  0% { opacity: 0; }
+  5% { opacity: 0; -webkit-transform: translateX(-50px); }
+  10% { opacity: 1; -webkit-transform: translateX(0px); }
+  25% { opacity: 1; -webkit-transform: translateX(0px); }
+  30% { opacity: 0; -webkit-transform: translateX(50px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; }
+}
+@-ms-keyframes leftToRight{
+  0% { opacity: 0; }
+  5% { opacity: 0; -ms-transform: translateX(-50px); }
+  10% { opacity: 1; -ms-transform: translateX(0px); }
+  25% { opacity: 1; -ms-transform: translateX(0px); }
+  30% { opacity: 0; -ms-transform: translateX(50px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; }
 }
