working on css and organizing css files

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -4,8 +4,8 @@
 .my-name{
      color: #614936;
      display: inline-block;
-     font-family: 'Bilbo', cursive;
-     font-size: 8em;
+     font-family: 'Skyscraper';
+     font-size: 20em;
      font-weight: lighter;
      margin-top: 0;
      margin-left: 10%;
