working on adding json however something is broken

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -14,17 +14,18 @@
      text-align: center;
 }
 
-/* REVIEW: Float the main header to the left, to make room for the hamburger menu. */
+/* Float the main header to the left, to make room for the hamburger menu. */
 .heading-group-h1 {
   float: left;
   padding: 0 0 .2em 1em;
 }
 
-/* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+/* Add styles for the menu class. It should be bigger, and off to the right. */
 /* We changed size in icons.css file*/
-/*.icon-menu {
+.menu {
+  font-size: 3em;
   float: right;
-}*/
+}
 #filters {
   padding: 0;
   list-style: none;
