--- a/styles/layout.css
+++ b/styles/layout.css
@@ -34,9 +34,9 @@ h2{
   /*border-style: dashed;*/
   color: #614936;
   font-family: 'Lovers Quarrel', cursive;
-  font-size: 4em;
+  font-size: 3em;
   font-weight: lighter;
-  display: block;
+  display: inline-block;
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
